# AnemonixPKGM

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  README.md  build-apkg.sh  main.cpp  reinit.sh
anemo-epoch/: anemonix.yaml
anemo-epoch/package/home/cv2/: test.txt
anemo-package/: anemonix.yaml  build.anemonix
anemo-package/package/Users/cv2/Desktop/: anemo.txt
anemonix-cli/: CMakeLists.txt
anemonix-cli/include/cli/: cli.h  commands.hpp  package.hpp
anemonix-cli/src/: CMakeLists.txt  cli.cpp  main.cpp  package.cpp
anemonix-cli/src/commands/: build.cpp  install.cpp  search.cpp
apkg-builder/: CMakeLists.txt
apkg-builder/include /builder/: BuildEnvironment.h  PackageBuilder.hpp
apkg-builder/res/: build.anemonix  pkg.yaml
apkg-builder/scripts/: clang-toolchain.cmake
apkg-builder/src/: PackageBuilder.cpp
dependency-a/: anemonix.yaml  build.anemonix
dependency-a/package/Users/cv2/Desktop/: dependency-a.txt
dependency-b/: anemonix.yaml  build.anemonix
dependency-b/package/Users/cv2/Desktop/: dependency-b.txt
src/cli/: colors.h  defines.h
src/commands/: audit.cpp  info.cpp  init.cpp  install.cpp  list.cpp  remove.cpp  update.cpp
src/core/: Anemo.cpp  Anemo.h  Database.cpp  Database.h  Filesystem.h  Package.cpp  Package.h  Utilities.cpp  Utilities.h  config.h  transaction.cpp
src/database/: getPackage.cpp  getPackageFiles.cpp  getReverseDependencies.cpp  init.cpp  insertFiles.cpp  insertPackage.cpp  insertProvided.cpp  isProtected.cpp  markAsBroken.cpp  packageExists.cpp  removePackage.cpp  satisfilesDeps.cpp
src/filesystem/: firstPass.cpp  initFolders.cpp  isMetadataOrScript.cpp  secondPass.cpp
src/utils/: compareVersions.cpp  parseDependency.cpp  parseMetadata.cpp  runScript.cpp  satisfies.cpp  splitString.cpp
test-package/: anemonix.yaml  build.anemonix
test-package-with-dependency/: anemonix.yaml
test-package-with-dependency/package/Users/cv2/Desktop/: test-with-deps.txt
test-package/package/Users/cv2/Desktop/: test.txt
test-packages/glibc/: anemonix.yaml
test-packages/sqlite3/: anemonix.yaml
test-packages/yaml-cpp/: anemonix.yaml
tests/parsing/: Makefile  Package.h  anemonix.yaml  colors.h  parsing.cpp
tests/transaction/: Makefile  transaction_tests.cpp
